--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@analytics/google-analytics": "^0.3.1",
     "analytics": "^0.3.5",
     "faunadb": "^2.13.1",
+    "inquirer": "^8.1.1",
     "markdown-magic": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,7 +20,7 @@
     "build": "react-scripts build"
   },
   "devDependencies": {
-    "netlify-cli": "^2.19.0"
+    "netlify-cli": "^4.1.7"
   },
   "browserslist": [
     ">0.2%",
