--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#00000000",
+  "theme_color": "#0892d0",
   "background_color": "#ffffff"
 }
